matchers: contains extra details